<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="CheckIfAtFloor" Id="{d18c60a8-2a65-41b2-8bfe-01227aff4eea}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION CheckIfAtFloor : BOOL
VAR_INPUT
	
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GVL.targetFloor = GVL.currentFloor THEN
	CheckIfAtFloor := TRUE;
	
	// Wait for user input inside lift
//	GVL.liftOperation := TRUE;
	
	// Stop lift movements
	GVL.liftMoving := FALSE;
//	GVL.ledLiftMoving := FALSE;
	
//	// Turn off ledLevels
//	GVL.ledLevel0 := FALSE;
//	GVL.ledLevel1 := FALSE;
//	GVL.ledLevel2 := FALSE;
	
//	// Open the door
//	GVL.openDoor := TRUE;
//	GVL.ledDoorsOpen := TRUE;
	
//	// SInulate lift timer
//	GVL.simulationTime(IN := TRUE, PT := GVL.simulationPace);
	
//	// SInulate lift door timer
//	IF GVL.simulationTime.Q THEN
//		GVL.simulationTime(IN := FALSE);
//		GVL.openDoor := FALSE;
//		GVL.ledDoorsOpen := FALSE;
		
//		GVL.liftOperation := FALSE;
//		// Set case to 2 and wait for outside user input
//		GVL.caseInput := 1;
//	END_IF

	
ELSIF GVL.targetFloor < GVL.currentFloor THEN
	GVL.caseInput := 3;
ELSIF GVL.targetFloor > GVL.currentFloor THEN
	GVL.caseInput := 4;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="CheckIfAtFloor">
      <LineId Id="14" Count="0" />
      <LineId Id="49" Count="1" />
      <LineId Id="53" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="15" Count="29" />
      <LineId Id="46" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>